made the columns more browser responsive, working on localStorage to save data client side, and ability to create an item

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Drag and Drop</title>
+  <link rel="icon" type="image/png" href="https://static.thenounproject.com/png/66553-200.png"
+/>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -22,7 +24,12 @@
           <h1>Backlog</h1>
         </span>
         <div id="backlog-content" class="column-content">
+          <ul class="drag-item-list">
 
+          </ul>
+        </div>
+        <div class="add-btn">
+          <span>Add Item</span>
         </div>
       </li>
 
@@ -31,7 +38,12 @@
           <h1>Progress</h1>
         </span>
         <div id="progress-content" class="column-content">
+          <ul class="drag-item-list">
 
+          </ul>
+        </div>
+        <div class="add-btn">
+          <span>Add Item</span>
         </div>
       </li>
 
@@ -40,7 +52,12 @@
           <h1>Review</h1>
         </span>
         <div id="review-content" class="column-content">
+          <ul class="drag-item-list">
 
+          </ul>
+        </div>
+        <div class="add-btn">
+          <span>Add Item</span>
         </div>
       </li>
 
@@ -49,7 +66,12 @@
           <h1>Complete</h1>
         </span>
         <div class="complete-content" class="column-content">
+          <ul class="drag-item-list">
 
+          </ul>
+        </div>
+        <div class="add-btn">
+          <span>Add Item</span>
         </div>
       </li>
 
