--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Drag and Drop</title>
   <link rel="icon" type="image/png" href="https://cdn3.iconfinder.com/data/icons/business-color-8/100/business-color-go-10-512.png" />
@@ -15,7 +15,7 @@
 
 <body>
   <h1 class="app-title">Kanban Board</h1>
-  <h2 class="app-description">Drag and Drop</h1>
+  <h2 class="app-description">Drag and Drop</h2>
     <div class="drag-container">
       <ul class="drag-columns">
         <li class="drag-column to-do-column">
